--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mdc-react",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "Material Components for the web implemented in React",
   "main": "./dist/index.js",
   "exports": {
