--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
+        "plugin:react/jsx-runtime",
         "plugin:react-hooks/recommended"
     ],
     "parserOptions": {
