--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-docs": "webpack --config-name=docs  --env=production --mode=production",
     "lint": "eslint ./src",
     "start": "webpack --watch --env=development --mode=development",
-    "prepublish": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build"
   },
   "peerDependencies": {
     "react": "^17.0.0",
