--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "build": "webpack --env=production --mode=production",
-    "docs": "webpack serve --config-name=docs --hot --history-api-fallback",
-    "build-docs": "webpack --config-name=docs  --env=production --mode=production",
+    "docs": "webpack serve --config-name=docs --env=development --mode=development --hot --history-api-fallback",
+    "build-docs": "webpack --config-name=docs --env=production --mode=production",
     "lint": "eslint ./src",
     "start": "webpack --watch --env=development --mode=development",
     "prepublishOnly": "npm run lint && npm run build"
@@ -40,6 +40,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "highlight.js": "^11.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "marked": "^3.0.7",
     "mini-css-extract-plugin": "^2.4.2",
     "postcss-loader": "^6.2.0",
